--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,8 @@ description = "The community directory for personal Top 4 lists. Share your rank
 
 # Settings
 compile_sass = true
+minify_html = true
+generate_feeds = false
 build_search_index = false
 
 [markdown]
